# nist-mcp-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FUNCTIONALITY_ENHANCEMENT_REPORT.md  LICENSE  Makefile  README.md  SECURITY.md  URL_VALIDATION_REPORT.md  bandit-report.json  pyproject.toml  requirements.txt  setup_project.sh  test-report.json  test_baseline.py  test_server.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
THIRD_PARTY_LICENSES/: NIST_LICENSE.txt  OSCAL_LICENSE.txt
data/: README.md  history.db  loader.py
data/examples/: sample-catalog.json  sample-ssp.json
docs/: README.md
scripts/: download_nist_data.py  install.sh  run_tests.py  validate_urls.py
src/nist_mcp/: analysis_tools.py  control_tools.py  evidence.py  reporting.py  server.py
src/nist_mcp/connectors/: aws.py  base.py
src/nist_mcp/data/: __init__.py  loader.py
src/nist_mcp/endpoints/: analysis_endpoints.py  control_endpoints.py  framework_endpoints.py  monitoring_endpoints.py
src/nist_mcp/history/: __init__.py  storage.py
src/nist_mcp/infrastructure/: container.py
src/nist_mcp/monitoring/: monitor.py
src/nist_mcp/services/: control_service.py
src/nist_mcp/workflows/: strands.py
tests/: test_basic.py  test_data_loader.py  test_mcp_integration.py  test_performance.py  test_security.py  test_server.py
tools/: control_tools.py
